fixed collapse window color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-.body {
-    background: linear-gradient(white, rgba(255,255,255,0));
-}
 
 .navbar-custom {
     background-color: rgb(238, 238, 238);
@@ -15,7 +12,7 @@
 }
 
 .navbar-custom button {
-    color: rgb(19, 19, 19);
+    color: rgb(184, 38, 38);
 }
 
 .navbar-container img {
@@ -30,4 +27,10 @@
 
 .content-center h1 {
     color: rgb(240, 233, 235);
+}
+
+@media screen and (max-width: 991px) {
+    .sidebar-collapse .navbar-collapse:before {
+        background: linear-gradient(rgb(223, 41, 102), rgb(231, 136, 48));
+    }
 }
